# Cpp-ProjectTemplate

./: .gitignore  CMakeLists.txt
include/: Class1.h  Class2.h
src/: main.cpp
src/Class1/: Class1.cpp
src/Class2/: Class2.cpp
